# snowthere

./: .env.example  .gitignore  AGENTS.md  AGENT_NATIVE.md  CLAUDE.md  DEPLOY.md  package.json  pnpm-lock.yaml
agents/: .env.example  ARCHITECTURE.md  Procfile  RAILWAY_DEPLOY.md  README.md  RUNBOOK.md  __init__.py  cron.py  nixpacks.toml  pyproject.toml  railway.toml  railway_check.py  requirements.txt  run.py
agents/agent_layer/: __init__.py  base.py  coordinator.py  hooks.py  memory.py  tracer.py
agents/generate_guide/: __init__.py  agent.py  main.py  schemas.py
agents/mcp_server/: README.md  __init__.py  server.py
agents/optimize_for_geo/: __init__.py  agent.py  main.py  schemas.py
agents/pipeline/: __init__.py  decision_maker.py  guide_orchestrator.py  orchestrator.py  runner.py
agents/prompts/: familyvalue.md  trustguard.md  voicecoach.md
agents/research_resort/: __init__.py  agent.py  main.py  schemas.py
agents/scripts/: __init__.py  audit_data_quality.py  backfill_calendars.py  backfill_coordinates.py  backfill_costs.py  backfill_data_quality.py  backfill_hybrid_scores.py  backfill_links.py  backfill_pricing.py  backfill_quick_takes.py  backfill_regions.py  backfill_style.py  backfill_taglines.py  cleanup_ai_images.py  fetch_hero_images.py  fix_cost_outliers.py  fix_feb12_resorts.py  fix_jan28_failures.py  fix_missing_pricing.py  fix_resort_data_gaps.py  force_revalidate.py  generate_guide_images_nano_banana.py  load_email_templates.py  recalculate_scores.py  regenerate_guide_content.py  regenerate_resort_content.py  seed_guides.py  test_pipeline.py  (+2 more)
(+244 files in other folders)
