[project]
name = "snowthere-agents"
version = "0.1.0"
description = "IACP agents for Snowthere family ski directory"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.26.0",
    "anthropic>=0.40.0",
    "supabase>=2.3.0",
    "exa-py>=1.0.0",
    "google-search-results>=2.4.2",
    "tavily-python>=0.3.0",
    "python-dotenv>=1.0.0",
    # Image generation dependencies
    "google-genai>=0.3.0",
    "replicate>=0.25.0",
    # Text processing
    "unidecode>=1.3.0",  # Transliterate non-Latin to ASCII for Google Places
    "beautifulsoup4>=4.12.0",  # HTML parsing for official image scraping
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
